# amanda

./: .cvsignore  AUTHORS  CHANGES  COPYRIGHT  COPYRIGHT-GNU  COPYRIGHT-REGEX  ChangeLog  Makefile.am  Makefile.in  NEWS  README  ReleaseNotes  acconfig.h  acinclude.m4  aclocal.m4  autogen  config.h.in  configure  configure.in
amandad-src/: Makefile.am  amandad.c  amandad.h  amandad_util.c
amar-src/: amar-test.c  amar.c
amplot/: .cvsignore  Makefile.am  Makefile.in  amplot.awk  amplot.g  amplot.sh.in
changer-src/: .cvsignore  Makefile.am  Makefile.in  chg-chio.c  chg-chio.pl.in  chg-chs.sh.in  chg-disk.sh.in  chg-generic.sh.in  chg-iomega.pl.in  chg-juke.sh.in  chg-manual.sh.in  chg-mtx.sh.in  chg-multi.sh.in  chg-null.sh.in  chg-rait.sh.in  chg-rth.pl.in  chg-rth.sh.in  chg-scsi-chio.c  chg-scsi.c  chg-zd-mtx.sh.in  chs-changer.sh.in  hp-changer.sh.in  libscsi.h  no-changer.sh.in  rth-changer.pl.in  scsi-aix.c  scsi-bsd.c  scsi-cam.c  scsi-changer-driver.c  scsi-chio.c  scsi-defs.h  scsi-hpux.c  scsi-hpux_new.c  scsi-irix.c  scsi-linux.c  scsi-proto.c  scsi-solaris.c  seagate-changer.c  sense.c
client-src/: .cvsignore  Makefile.am  Makefile.in  amandad-krb4.c  amandad.c  amandad.h  amandates.c  amandates.h  amhpfixdevs.sh  amqde.c  amrecover.c  amrecover.h  calcsize.c  client_util.c  client_util.h  clientconf.c  clientconf.h  createindex-dump.c  createindex-gnutar.c  display_commands.c  extract_list.c  findpass.c  findpass.h  fnmatch.c  fnmatch.h  getfsent.c  getfsent.h  help.c  indexfilename.c  indexfilename.h  killpgrp.c  noop.c  patch-system.sh.in  rundump.c  runtar.c  selfcheck.c  sendbackup-common.c  sendbackup-common.h  sendbackup-dump.c  sendbackup-gnutar.c  (+9 more)
common-src/: .cvsignore  Makefile.am  Makefile.in  add_exclude.c  alloc.c  amanda.h  amandates.c  amandates.h  amfeatures.c  amfeatures.h  amflock.c  amindex.c  amindex.h  amregex.h  arglist.h  auth-compat.c  auth.c  auth.h  base64.c  base64.h  bsd-security.c  bsdtcp-security.c  bsdudp-security.c  changer.c  changer.h  check_exclude.c  clock.c  clock.h  conffile.c  conffile.h  debug.c  dgram.c  dgram.h  diskfile.c  error.c  event.c  event.h  features.c  features.h  file.c  (+76 more)
config/: .cvsignore  Makefile.am  acconfig.h  acinclude.m4  acinclude.m4i  depcomp  ltconfig  ltmain.sh  mkinstalldirs
config-aux/: Makefile.am  ltmain.sh  mkinstalldirs
config/amanda/: flags.m4
config/libtool/: libtool.m4
contrib/: dbbackup.ksh  dbbackup.tcl  set_prod_link.pl
device-src/: amdevcheck.pl  device.c  device.h  ndmp-device.c  property.h  s3-device.c  s3.c  s3.h  vfs-device.c  xfer-dest-taper-directtcp.c  xfer-dest-taper-splitter.c  xfer-source-device.c
docs/: DUMPER-API  EVENT-API  EXCLUDE  FAQ  HOWTO-FILE-DRIVER  INDEXING  INSTALL  INTERNALS  KERBEROS  KRB4  KRB5  LABEL.PRINTING  Makefile.am  QUEUE-API  RAIT  RESTORE  SAMBA  SECURITY  SECURITY-API  STRATEGY-API  SUNOS4.BUG  SYSTEM.NOTES  TAPE.CHANGERS  TAPETYPES  TOP-TEN-QUESTIONS  UPGRADE  WHATS.NEW  WISHLIST  amadmin.8.txt  amanda-client.conf.5.txt  amanda.8.txt  amanda.conf.5.txt  amdump.8.txt  amflush.8.txt  amlabel.8.txt  amoverview.8.txt  amreport.8.txt  amtapetype.8.txt  chgscsi.txt  eventapi.txt  (+28 more)
dumper-src/: .cvsignore  Makefile.am  generic-dumper.pl.in  gnutar.pl.in
example/: .cvsignore  DLT.ps  EXB-8500.ps  HP-DAT.ps  Makefile.am  Makefile.in  amanda-client.conf.in  amanda.conf.chg-scsi.in  amanda.conf.in  chg-generic.conf  chg-multi.conf  chg-scsi-tandberg-slr.conf.in  config.site  disklist
installcheck/: Amanda_Changer.pl  Amanda_Changer_compat.pl  Amanda_Changer_disk.pl  Amanda_Changer_multi.pl  Amanda_Changer_null.pl  Amanda_Changer_rait.pl  Amanda_Changer_robot.pl  Amanda_Changer_single.pl  Amanda_Config.pl  Amanda_Device.pl  Amanda_Recovery_Clerk.pl  Amanda_Recovery_Scan.pl  Amanda_Taper_Scribe.pl  Amanda_Xfer.pl  amcheckdump.pl  amrestore.pl  amrmtape.pl  taper.pl
man/: .cvsignore  Makefile.am  Makefile.in  amadmin.8  amadmin.8.in  amanda.8  amanda.8.in  amcheck.8  amcheck.8.in  amcheckdb.8  amcheckdb.8.in  amcleanup.8  amcleanup.8.in  amdd.8  amdump.8  amdump.8.in  amflush.8  amflush.8.in  amgetconf.8.in  amlabel.8  amlabel.8.in  ammt.8  amoverview.8  amoverview.8.in  amplot.8  amrecover.8  amrecover.8.in  amreport.8.in  amrestore.8  amrmtape.8  amrmtape.8.in  amstatus.8.in  amtape.8  amtapetype.8.in  amtoc.8  amtoc.8.in  amverify.8.in
man/entities/: global.entities
man/xml-source/: amadmin.8.xml  amaespipe.8.xml  amanda-changers.7.xml  amanda-client.conf.5.xml  amanda-interactivity.7.xml  amanda-taperscan.7.xml  amanda.8.xml  amanda.conf.5.xml  amcheck.8.xml  amcrypt-ossl-asym.8.xml  amcrypt.8.xml  amfetchdump.8.xml  amgetconf.8.xml  amrecover.8.xml  amreport.8.xml  amtapetype.8.xml
man/xslt/: global.entities
ndmp-src/: Makefile.am  amndma_tape_simulator.c  ndmpconnobj.c  ndmpconnobj.h
oldrecover-src/: Makefile.am  amrecover.c  amrecover.h  display_commands.c  extract_list.c  help.c  set_commands.c  uparse.y  uscan.l
patches/: Makefile.am  (+13 more)
recover-src/: .cvsignore  Makefile.am  Makefile.in  amrecover.c  amrecover.h  amrestore.c  display_commands.c  extract_list.c  help.c  set_commands.c  uparse.c  uparse.h  uparse.y  uscan.c  uscan.l
restore-src/: .cvsignore  Makefile.am  amfetchdump.c  amidxtaped.c  amrestore.c  restore.c  restore.h
server-src/: .cvsignore  Makefile.am  Makefile.in  amadmin.c  amaespipe.sh.in  amcheck-device.pl  amcheck.c  amcheckdb.sh.in  amcheckdump.pl  amcleanup.sh.in  amcleanupdisk.c  amcrypt-ossl-asym.sh.in  amcrypt-ossl.sh.in  amcrypt.sh.in  amdump.sh.in  amflush.c  amfreetapes.sh.in  amgetidx.c  amidxtaped.c  amindex.c  amindex.h  amindexd.c  amindexd.h  amlabel.c  amlogroll.c  amoverview.pl.in  amrmtape.pl  amrmtape.sh.in  amstatus.pl.in  amtape.c  amtape.h  amtoc.pl.in  amtrmidx.c  amtrmlog.c  amverify.sh.in  amverifyrun.sh.in  changer.c  changer.h  chunker.c  clock.c  (+34 more)
tape-src/: .cvsignore  Makefile.am  am-dd.c  am-mt.c  amdd.c  ammt.c  output-file.c  output-file.h  output-null.c  output-null.h  output-rait.c  output-rait.h  output-tape.c  output-tape.h  rait.c  tapeio.c  tapeio.h  tapetype.c
(+47 files in other folders)
